--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,11 @@
 			<artifactId>weka-dev</artifactId>
 			<version>3.7.6</version>
 		</dependency>
-		
 
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 </project>
