--- a/src/main/resources/HTS-1/data/Makefile.in
+++ b/src/main/resources/HTS-1/data/Makefile.in
@@ -145,6 +145,66 @@ lf0:
 		fi; \
 	done
 
+
+# str for mixed excitation: extract voicing strenghts
+str:
+	# Extracting strengths from $(STRORDER) filtered bands of raw audio, it requires $(STRORDER) filters.
+        # By default the number of filters is 5 and located in ../data/filters/mix_excitation_filters.txt
+        # (see a description of this file format in ../data/get_str.tcl)
+	mkdir -p str
+	for raw in raw/*.raw; do \
+		base=`basename $${raw} .raw`; \
+		if [ -s $${raw} ]; then \
+			echo "Extracting strengths from $${raw}"; \
+			count=`echo "0.005 * $(SAMPFREQ)" | $(BC) -l`; \
+			$(STEP) -l `printf "%.0f" $${count}` | \
+			$(X2X) +fs > tmp.head; \
+			count=`echo "0.025 * $(SAMPFREQ)" | $(BC) -l`; \
+			$(STEP) -l `printf "%.0f" $${count}` | \
+			$(X2X) +fs > tmp.tail; \
+			cat tmp.head $${raw} tmp.tail > tmp; \
+			$(TCLSH) scripts/get_str.tcl -l -H $(UPPERF0) -L $(LOWERF0) -p $(FRAMESHIFT) -r $(SAMPFREQ) -f $(STRFILTERNAME) -n $(STRORDER) tmp | \
+			$(X2X) +af > str/$${base}.str; \
+		fi; \
+	done
+	rm -f tmp tmp.head tmp.tail
+
+
+
+# mag for mixed excitation: extract Fourier magnitudes
+mag:
+	# Extracts first the residual from inverse filtering using SPTK, then it uses snack to
+        # extract F0 and with this values searchs for the first ten or more harmonics.
+	mkdir -p mag
+	for raw in raw/*.raw; do \
+		base=`basename $${raw} .raw`; \
+		if [ -s $${raw} ]; then \
+			echo "Extracting Fourier magnitudes from $${raw}"; \
+			count=`echo "0.005 * $(SAMPFREQ)" | $(BC) -l`; \
+			$(STEP) -l `printf "%.0f" $${count}` | \
+			$(X2X) +fs > tmp.head; \
+			count=`echo "0.015 * $(SAMPFREQ)" | $(BC) -l`; \
+			$(STEP) -l `printf "%.0f" $${count}` | \
+			$(X2X) +fs > tmp.tail; \
+			cat tmp.head $${raw} tmp.tail > tmp.raw; \
+			if [ $(BYTESWAP) -eq 1 ]; then \
+				$(SWAB) +s tmp.raw | $(X2X) +sf > tmp;  \
+			else \
+				$(X2X) +sf tmp.raw > tmp; \
+			fi; \
+			$(# echo "Using inverse filtering to extract a residual signal from $${raw}"; )\
+			$(FRAME) +f -p $(FRAMESHIFT) tmp | \
+			$(WINDOW) -w $(WINDOWTYPE) -n $(NORMALIZE) | \
+			$(GCEP) -c 2 -m $(MGCORDER) -e 0.001 > tmp.gcep; \
+			$(IGLSADF) -k -c 2 -m $(MGCORDER) -p $(FRAMESHIFT) tmp.gcep < tmp > tmp.res; \
+			$(TCLSH) scripts/get_mag.tcl -l -H $(UPPERF0) -L $(LOWERF0) -m $(MAGORDER) -p $(FRAMESHIFT) -r $(SAMPFREQ) tmp.raw tmp.res | \
+			$(X2X) +af > mag/$${base}.mag; \
+		fi; \
+	done
+	rm -f tmp tmp.head tmp.tail tmp.res tmp.raw tmp.head tmp.gcep
+
+
+
 cmp: 
 	# Composing training data files from mgc and lf0 files
 	mkdir -p cmp
@@ -180,32 +240,144 @@ cmp:
 	done
 	rm -f cmp/tmp*
 
-label:
-	# Extracting monophone and fullcontext labels from utterance files
-	mkdir -p labels/mono
-	mkdir -p labels/full
 
-	for utt in utts/$(DATASET)_$(SPEAKER)_*.utt; do \
-		base=`basename $${utt} .utt`; \
-		if [ -s $${utt} ]; then \
-			$(DUMPFEATS)    -eval     scripts/extra_feats.scm \
-					-relation Segment \
-					-feats    scripts/label.feats \
-					-output   tmp \
-					$${utt}; \
-		fi; \
-		$(AWK) -f scripts/label-full.awk tmp > labels/full/$${base}.lab; \
-		$(AWK) -f scripts/label-mono.awk tmp > labels/mono/$${base}.lab; \
+
+# str for mixed excitation
+cmp2:
+	# Composing training data files from mgc, lf0, and str files
+	mkdir -p cmp
+	for j in 1; do \
+		MGCDIM=`expr $(MGCORDER) + 1`; \
+		LF0DIM=1; \
+                STRDIM=$(STRORDER); \
+                echo "STRDIM=$${STRDIM}"; \
+		MGCWINDIM=`expr $(NMGCWIN) \* $${MGCDIM}`; \
+		LF0WINDIM=`expr $(NLF0WIN) \* $${LF0DIM}`; \
+                STRWINDIM=`expr $(NSTRWIN) \* $${STRDIM}`; \
+                MGCPLUSLF0=`expr $${MGCWINDIM} + $${LF0WINDIM}`; \
+                echo "MGCWINDIM=$${MGCWINDIM}"; \
+                echo "LF0WINDIM=$${LF0WINDIM}"; \
+                echo "STRWINDIM=$${STRWINDIM}"; \
+                echo "MGCPLUSLF0=$${MGCPLUSLF0}"; \
+		BYTEPERFRAME=`expr 4 \* \( $${MGCWINDIM} + $${LF0WINDIM} + $${STRWINDIM} \)`; \
+                echo "BYTEPERFRAME=$${BYTEPERFRAME}"; \
+		for mgc in mgc/*.mgc; do \
+			base=`basename $${mgc} .mgc`; \
+			MGCWINS=""; \
+			LF0WINS=""; \
+			STRWINS=""; \
+			if [ -s $${mgc} -a -s lf0/$${base}.lf0 -a -s str/$${base}.str ]; then \
+                                $(# echo "for mgc"; )\
+				i=1; \
+				echo "Composing training data (mgc+lf0+str) for $${base}"; \
+				while [ $${i} -le $(NMGCWIN) ]; do \
+					eval MGCWINS=\"$${MGCWINS} $(MGCWIN)$${i}\"; \
+					i=`expr $${i} + 1`; \
+				done; \
+				$(PERL) scripts/window.pl $${MGCDIM} $${mgc} $${MGCWINS} > cmp/tmp.mgc; \
+                                $(# echo "for lf0"; ) \
+				i=1; \
+				while [ $${i} -le $(NLF0WIN) ]; do \
+					eval LF0WINS=\"$${LF0WINS} $(LF0WIN)$${i}\"; \
+					i=`expr $${i} + 1`; \
+				done; \
+				$(PERL) scripts/window.pl $${LF0DIM} lf0/$${base}.lf0 $${LF0WINS} > cmp/tmp.lf0; \
+                                $(# echo "for strengths"; ) \
+				i=1; \
+				while [ $${i} -le $(NSTRWIN) ]; do \
+					eval STRWINS=\"$${STRWINS} $(STRWIN)$${i}\"; \
+					i=`expr $${i} + 1`; \
+				done; \
+                                $(# echo "STRWINS=$${STRWINS}"; ) \
+				$(PERL) scripts/window.pl $${STRDIM} str/$${base}.str $${STRWINS} > cmp/tmp.str; \
+                                $(# echo "now merge temporary files: tmp.mgc, tmp.lf0, tmp.str"; )  \
+				$(MERGE) +f -s 0 -l $${LF0WINDIM} -L $${MGCWINDIM} cmp/tmp.mgc < cmp/tmp.lf0 > cmp/tmp.cmp1; \
+                                $(MERGE) +f -s 0 -l $${STRWINDIM} -L $${MGCPLUSLF0} cmp/tmp.cmp1 < cmp/tmp.str > cmp/tmp.cmp; \
+                                $(# echo "add HTK header"; ) \
+				$(PERL) scripts/addhtkheader.pl $(SAMPFREQ) $(FRAMESHIFT) $${BYTEPERFRAME} 9 cmp/tmp.cmp > cmp/$${base}.cmp; \
+			fi; \
+		done; \
 	done
-	rm -f tmp
+	rm -f cmp/tmp.*
 
-mlf:
-	# Generating monophone and fullcontext Master Label Files (MLF)
-	echo "#!MLF!#" > labels/mono.mlf
-	echo "\"*/$(DATASET)_$(SPEAKER)_*.lab\" -> \"@PWD@/data/labels/mono\"" >> labels/mono.mlf
 
-	echo "#!MLF!#" > labels/full.mlf
-	echo "\"*/$(DATASET)_$(SPEAKER)_*.lab\" -> \"@PWD@/data/labels/full\"" >> labels/full.mlf
+
+
+# str and mag for mixed excitation
+cmp3:
+	# Composing training data files from mgc, lf0, str and mag files
+	mkdir -p cmp
+	for j in 1; do \
+		MGCDIM=`expr $(MGCORDER) + 1`; \
+		LF0DIM=1; \
+                STRDIM=$(STRORDER); \
+		MAGDIM=$(MAGORDER); \
+                echo "STRDIM=$${STRDIM}"; \
+		echo "MAGDIM=$${MAGDIM}"; \
+		MGCWINDIM=`expr $(NMGCWIN) \* $${MGCDIM}`; \
+		LF0WINDIM=`expr $(NLF0WIN) \* $${LF0DIM}`; \
+                STRWINDIM=`expr $(NSTRWIN) \* $${STRDIM}`; \
+		MAGWINDIM=`expr $(NMAGWIN) \* $${MAGDIM}`; \
+                MGCPLUSLF0=`expr $${MGCWINDIM} + $${LF0WINDIM}`; \
+		MGCPLUSLF0PLUSSTR=`expr $${MGCWINDIM} + $${LF0WINDIM} + $${STRWINDIM}`; \
+                echo "MGCWINDIM=$${MGCWINDIM}"; \
+                echo "LF0WINDIM=$${LF0WINDIM}"; \
+                echo "STRWINDIM=$${STRWINDIM}"; \
+		echo "MAGWINDIM=$${MAGWINDIM}"; \
+                echo "MGCPLUSLF0=$${MGCPLUSLF0}"; \
+		echo "MGCPLUSLF0PLUSSTR=$${MGCPLUSLF0PLUSSTR}"; \
+		BYTEPERFRAME=`expr 4 \* \( $${MGCWINDIM} + $${LF0WINDIM} + $${STRWINDIM} + $${MAGWINDIM} \)`; \
+                echo "BYTEPERFRAME=$${BYTEPERFRAME}"; \
+		$(# for mcp in mcp/*.mcp; do )\
+		for mgc in mgc/*.mgc; do \
+			base=`basename $${mgc} .mgc`; \
+			MGCWINS=""; \
+			LF0WINS=""; \
+			STRWINS=""; \
+			MAGWINS=""; \
+			if [ -s $${mgc} -a -s lf0/$${base}.lf0 -a -s str/$${base}.str -a -s mag/$${base}.mag ]; then \
+                                $(# for mgc )\
+				i=1; \
+				echo "Composing training data (mgc+lf0+str+mag) for $${base}"; \
+				while [ $${i} -le $(NMGCWIN) ]; do \
+					eval MGCWINS=\"$${MGCWINS} $(MGCWIN)$${i}\"; \
+					i=`expr $${i} + 1`; \
+				done; \
+				$(PERL) scripts/window.pl $${MGCDIM} $${mgc} $${MGCWINS} > cmp/tmp.mgc; \
+                                $(# for lf0 )\
+				i=1; \
+				while [ $${i} -le $(NLF0WIN) ]; do \
+					eval LF0WINS=\"$${LF0WINS} $(LF0WIN)$${i}\"; \
+					i=`expr $${i} + 1`; \
+				done; \
+				$(PERL) scripts/window.pl $${LF0DIM} lf0/$${base}.lf0 $${LF0WINS} > cmp/tmp.lf0; \
+                                $(# for strengths )\
+				i=1; \
+				while [ $${i} -le $(NSTRWIN) ]; do \
+					eval STRWINS=\"$${STRWINS} $(STRWIN)$${i}\"; \
+					i=`expr $${i} + 1`; \
+				done; \
+                                $(# echo "STRWINS=$${STRWINS}"; )\
+				$(PERL) scripts/window.pl $${STRDIM} str/$${base}.str $${STRWINS} > cmp/tmp.str; \
+                                $(# for Fourier magnitudes )\
+				i=1; \
+				while [ $${i} -le $(NMAGWIN) ]; do \
+					eval MAGWINS=\"$${MAGWINS} $(MAGWIN)$${i}\"; \
+					i=`expr $${i} + 1`; \
+				done; \
+                                $(# echo "MAGWINS=$${MAGWINS}"; )\
+				$(PERL) scripts/window.pl $${MAGDIM} mag/$${base}.mag $${MAGWINS} > cmp/tmp.mag; \
+                                $(# now merge temporary files: tmp.mgc, tmp.lf0, tmp.str, tmp.mag  )\
+				$(MERGE) +f -s 0 -l $${LF0WINDIM} -L $${MGCWINDIM} cmp/tmp.mgc < cmp/tmp.lf0 > cmp/tmp.cmp1; \
+                                $(MERGE) +f -s 0 -l $${STRWINDIM} -L $${MGCPLUSLF0} cmp/tmp.cmp1 < cmp/tmp.str > cmp/tmp.cmp2; \
+				$(MERGE) +f -s 0 -l $${MAGWINDIM} -L $${MGCPLUSLF0PLUSSTR} cmp/tmp.cmp2 < cmp/tmp.mag > cmp/tmp.cmp; \
+                                $(# add HTK header )\
+				$(PERL) scripts/addhtkheader.pl $(SAMPFREQ) $(FRAMESHIFT) $${BYTEPERFRAME} 9 cmp/tmp.cmp > cmp/$${base}.cmp; \
+			fi; \
+		done; \
+	done
+	rm -f cmp/tmp.*
+
 
 list:
 	# Generating a fullcontext model list file
